<resources>
    <string name="app_name">Practice</string>
    <string name="cancle">Cancle</string>
    <string name="cancel">Cancel</string>
    <string name="search_employee_number">Search Employee Number</string>
    <string name="international_activity">International activity</string>
    <string name="select_one">Select One</string>
    <string name="transactions">Transactions</string>
    <string name="manageaccount">Manage Account</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="in_out">in/out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_details">Card Details</string>
    <string name="change_pin">Change PIN</string>
    <string name="freeze_card">Freeze Card</string>
    <string name="add_to_apple_wallet">Add to Apple Wallet</string>
    <string name="manage_card">Manage Card</string>
    <string name="billing_address">Billing address</string>
</resources>