<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.card.CardsFragment">



    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ubuntu_bold_36"
                android:layout_marginTop="@dimen/_50sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="CAD 300.00"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Available to spend"
                style="@style/inter_semi_16"
                app:layout_constraintTop_toBottomOf="@id/tv_balance"
                app:layout_constraintStart_toStartOf="@id/tv_balance"
                app:layout_constraintEnd_toEndOf="@id/tv_balance"/>
            <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                android:id="@+id/carousel"
                android:layout_width="0dp"
                android:layout_height="@dimen/_210sdp"
                app:autoPlay="false"
                app:carouselGravity="CENTER"
                app:carouselType="SHOWCASE"
                app:infiniteCarousel="true"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_114sdp"

                app:scaleOnScroll="true"
                app:scalingFactor=".10"

                app:showBottomShadow="false"
                app:showCaption="false"
                app:showIndicator="true"
                app:showNavigationButtons="false"
                app:showTopShadow="false"
                app:topShadowHeight="0dp"
                app:touchToPause="true" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_card_details"
                app:srcCompat="@drawable/ic_card_details"
                android:layout_marginTop="@dimen/_16sdp"
                app:layout_constraintTop_toBottomOf="@id/carousel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_change_pin"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_card_details"
                android:text="@string/card_details"
                style="@style/inter_semi_16"
                android:textColor="@color/orange"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintStart_toStartOf="@id/btn_card_details"
                app:layout_constraintEnd_toEndOf="@id/btn_card_details"
                app:layout_constraintTop_toBottomOf="@id/btn_card_details"/>
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_change_pin"
                app:srcCompat="@drawable/ic_change_pin"
                app:layout_constraintTop_toTopOf="@id/btn_card_details"
                app:layout_constraintBottom_toBottomOf="@id/btn_card_details"
                app:layout_constraintStart_toEndOf="@id/btn_card_details"
                app:layout_constraintEnd_toStartOf="@id/btn_freeze_card"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_change_pin"
                android:text="@string/change_pin"
                style="@style/inter_semi_16"
                android:textColor="@color/orange"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintStart_toStartOf="@id/btn_change_pin"
                app:layout_constraintEnd_toEndOf="@id/btn_change_pin"
                app:layout_constraintTop_toBottomOf="@id/btn_change_pin"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_freeze_card"
                app:srcCompat="@drawable/ic_card_freeze"
                app:layout_constraintTop_toTopOf="@id/btn_change_pin"
                app:layout_constraintBottom_toBottomOf="@id/btn_change_pin"
                app:layout_constraintStart_toEndOf="@id/btn_change_pin"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_freeze_card"
                android:text="@string/freeze_card"
                style="@style/inter_semi_16"
                android:textColor="@color/orange"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintStart_toStartOf="@id/btn_freeze_card"
                app:layout_constraintEnd_toEndOf="@id/btn_freeze_card"
                app:layout_constraintTop_toBottomOf="@id/btn_freeze_card"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_apple_pay"
                app:layout_constraintTop_toBottomOf="@id/tv_card_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/_23sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                android:orientation="horizontal"
                android:gravity="center">
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_apple_pay"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/add_to_apple_wallet"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    style="@style/inter_semi_18"/>
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_arrow"/>
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:id="@+id/tv_manage_card"
                android:text="@string/manage_card"
                style="@style/ubuntu_semi_18"
                app:layout_constraintTop_toBottomOf="@id/ll_apple_pay"
                app:layout_constraintStart_toStartOf="@id/ll_apple_pay"
                app:layout_constraintEnd_toEndOf="@id/ll_apple_pay"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:dividerThickness="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_3sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_manage_card"
                app:layout_constraintStart_toStartOf="@id/ll_apple_pay"
                app:layout_constraintEnd_toEndOf="@id/ll_apple_pay"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_card_actions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:clipToPadding="false"
                tools:itemCount="6"
                tools:listitem="@layout/item_card_options"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintStart_toStartOf="@id/divider"
                app:layout_constraintEnd_toEndOf="@id/divider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/pop_up"
        android:visibility="gone"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        layout="@layout/popup_card_details"/>

</androidx.constraintlayout.widget.ConstraintLayout>